feat:  1) 로그인 페이지에 thymeleaf 적용  2. 로그인 페이지 백엔드 구현 (데이터베이스 연동하여 아이디 확인후 로그인)  3. 회원가입 페이지 구현 (thymeleaf 적용)  4. 회원가입 페이지 백엔드 구현 (데이터베이스 연동하여 저장 가능)

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,9 +5,9 @@ spring:
       hibernate:
         format_sql: true
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
   datasource:
-    url: jdbc:mysql://52.79.122.208:3306/team8database?useSSL=false&useUnicode=true&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/team8database?useSSL=false&useUnicode=true&allowPublicKeyRetrieval=true
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: team8
-    password: team8888!!
+    username: root
+    password: 12341234
