--- a/mysql/docker-compose.yaml
+++ b/mysql/docker-compose.yaml
@@ -1,20 +1,18 @@
-#version: "3"
-#services:
-#  db:
-#    image: mysql:8.3.0
-#    restart: always
-#    command:
-#      - --lower_case_table_names=1
-#      - --character-set-server=utf8mb4
-#      - --collation-server=utf8mb4_unicode_ci
-#
-#    container_name: mysql
-#    ports:
-#      - "3306:3306"
-#    environment:
-#      - MYSQL_DATABASE=mydb
-#      - MYSQL_ROOT_PASSWORD=root1234!!
-#      - TZ=Asia/Seoul
-#
-#    volumes:
-#      - C:\Utility\MYSQL:/var/lib/mysql
+version: "3"
+services:
+  db:
+    image: mysql:8.3.0
+    restart: always
+    command:
+      - --lower_case_table_names=1
+      - --character-set-server=utf8mb4
+      - --collation-server=utf8mb4_unicode_ci
+    container_name: mysql
+    ports:
+      - "3306:3306"
+    environment:
+      - MYSQL_DATABASE=mydb
+      - MYSQL_ROOT_PASSWORD=root1234!!
+      - TZ=Asia/Seoul
+    volumes:
+      - C:\Utility\MYSQL:/var/lib/mysql
